# TSDjango

./: README.md  pyproject.toml
tsdjango/: settings.py
